--- a/index.html
+++ b/index.html
@@ -11,29 +11,6 @@
 	</head>
 
 	<body>
-
-		<script language="javascript">
-function fotoGal(id,w,h) {
-
-	var alt=' - ';
-	var left = Math.ceil( (window.screen.width-w) / 2 );
-	var top = Math.ceil( (window.screen.height-h) / 2)-30;
-
-
-	//	id = unescape(id);
-
-	myWin = window.open("","myWind","width="+w+",height="+h+",left="+left+",top="+top+");");
-	myWin.document.open();
-	myWin.document.write('<html><title>'+alt+'</title><body bgcolor="#ffffff" leftmargin="0" topmargin="0" marginheight="0" marginwidth="0" onBlur="self.close()">'); 
-	myWin.document.write('<a href=javascript:window.close();><img src=\"'+id+'\" width='+w+' height='+h+' border=0></a>'); 
-		myWin.document.write('</body></html>');
-	myWin.document.close();
-	myWin.focus();
-
-}
-
-
-		</script>
 		<div id="container">
 			<h1><img alt="TRANS-WOD" src="imgs/head.jpg" /></h1>
 
@@ -52,18 +29,19 @@ function fotoGal(id,w,h) {
 				</div>
 
 				<div id="gallery">
-					<div>
+				<div id="gallery-inner">
+					<div class="clearfix">
 					<a href="javascript:fotoGal('g/163_6387.JPG','640','480');"><img src="imgs/163_6387.JPG" style="border-color:#444444; border-width:1px;" width="129.01"
 																		 																	  height="97"></a>
 					<a href="javascript:fotoGal('g/163_6399.JPG','640','480');"><img
 		src="imgs/163_6399.JPG" style="border-color:#444444; border-width:1px;" width="129.01" height="97"></a>
 					</div>
-					<div>
+					<div class="single">
 					<a
 									  																href="javascript:fotoGal('g/163_6400.JPG','640','480');"><img src="imgs/163_6400.JPG" style="border-color:#444444; border-width:1px;"
 																		  													width="129.01" height="97"></a>
 					</div>
-					<div>
+					<div class="clearfix">
 					<a href="javascript:fotoGal('g/164_6401.JPG','640','480');"><img src="imgs/164_6401.JPG"
 																	  style="border-color:#444444; border-width:1px;"
 				   width="129.01" height="97"></a>
@@ -71,6 +49,7 @@ function fotoGal(id,w,h) {
 																	  style="border-color:#444444; border-width:1px;"
 				   width="129.01" height="97"></a>
 					</div>
+				</div>
 				</div>
 			</div>
 			<div id="offer">
