--- a/cut.html
+++ b/cut.html
@@ -17,7 +17,6 @@
 				<div id="contact">
 					Telefony: tel. 601 625 682
 				</div>
-<div class="clearfix"></div>
 
 				<div id="gallery">
 					<div class="clearfix">
@@ -39,6 +38,7 @@
 																	  style="border-color:#444444; border-width:1px;"
 				   width="129.01" height="97"></a>
 					</div>
+				</div>
 				</div>
 			</div>
 		</div>
