--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 		<link rel="stylesheet" media="all" href="common.css">
 		<link rel="stylesheet" media="only screen and (max-width: 637px)" href="small.css">
 		<link rel="stylesheet" media="only screen and (min-width: 638px)" href="large.css">
+		<link rel="stylesheet" href="photoswipe.css">
+		<link rel="stylesheet" href="default-skin.css">
+		<script src="photoswipe.min.js"></script>
+		<script src="photoswipe-ui-default.min.js"></script>
 		<title>TRANS-WOD</title>
 	</head>
 
@@ -30,23 +34,15 @@
 
 				<div id="gallery">
 					<div class="clearfix">
-					<a href="javascript:fotoGal('g/163_6387.JPG','640','480');"><img src="imgs/163_6387.JPG" style="border-color:#444444; border-width:1px;" width="129.01"
-																		 																	  height="97"></a>
-					<a href="javascript:fotoGal('g/163_6399.JPG','640','480');"><img
-		src="imgs/163_6399.JPG" style="border-color:#444444; border-width:1px;" width="129.01" height="97"></a>
+						<img src="imgs/163_6387.JPG" style="border-color:#444444; border-width:1px;" width="129.01" height="97">
+						<img src="imgs/163_6399.JPG" style="border-color:#444444; border-width:1px;" width="129.01" height="97">
 					</div>
 					<div class="single">
-					<a
-									  																href="javascript:fotoGal('g/163_6400.JPG','640','480');"><img src="imgs/163_6400.JPG" style="border-color:#444444; border-width:1px;"
-																		  													width="129.01" height="97"></a>
+						<img src="imgs/163_6400.JPG" style="border-color:#444444; border-width:1px;" width="129.01" height="97">
 					</div>
 					<div class="clearfix">
-					<a href="javascript:fotoGal('g/164_6401.JPG','640','480');"><img src="imgs/164_6401.JPG"
-																	  style="border-color:#444444; border-width:1px;"
-				   width="129.01" height="97"></a>
-					<a href="javascript:fotoGal('g/164_6408.JPG','640','480');"><img src="imgs/164_6408.JPG"
-																	  style="border-color:#444444; border-width:1px;"
-				   width="129.01" height="97"></a>
+						<img src="imgs/164_6401.JPG" style="border-color:#444444; border-width:1px;" width="129.01" height="97">
+						<img src="imgs/164_6408.JPG" style="border-color:#444444; border-width:1px;" width="129.01" height="97">
 					</div>
 				</div>
 			</div>
@@ -114,5 +110,106 @@
 		src="imgs/zegluga-03.jpg" style="border-color:#444444; border-width:1px;" width="129" height="97"></a></center>
 			</div>
 		</div>
+
+		<!-- Root element of PhotoSwipe. Must have class pswp. -->
+		<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+		
+		    <!-- Background of PhotoSwipe. 
+		         It's a separate element as animating opacity is faster than rgba(). -->
+		    <div class="pswp__bg"></div>
+		
+		    <!-- Slides wrapper with overflow:hidden. -->
+		    <div class="pswp__scroll-wrap">
+		
+		        <!-- Container that holds slides. 
+		            PhotoSwipe keeps only 3 of them in the DOM to save memory.
+		            Don't modify these 3 pswp__item elements, data is added later on. -->
+		        <div class="pswp__container">
+		            <div class="pswp__item"></div>
+		            <div class="pswp__item"></div>
+		            <div class="pswp__item"></div>
+		        </div>
+		
+		        <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
+		        <div class="pswp__ui pswp__ui--hidden">
+		
+		            <div class="pswp__top-bar">
+		
+		                <!--  Controls are self-explanatory. Order can be changed. -->
+		
+		                <div class="pswp__counter"></div>
+		
+		                <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+		
+		                <button class="pswp__button pswp__button--share" title="Share"></button>
+		
+		                <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+		
+		                <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+		
+		                <!-- Preloader demo http://codepen.io/dimsemenov/pen/yyBWoR -->
+		                <!-- element will get class pswp__preloader--active when preloader is running -->
+		                <div class="pswp__preloader">
+		                    <div class="pswp__preloader__icn">
+		                      <div class="pswp__preloader__cut">
+		                        <div class="pswp__preloader__donut"></div>
+		                      </div>
+		                    </div>
+		                </div>
+		            </div>
+		
+		            <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+		                <div class="pswp__share-tooltip"></div> 
+		            </div>
+		
+		            <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+		            </button>
+		
+		            <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+		            </button>
+		
+		            <div class="pswp__caption">
+		                <div class="pswp__caption__center"></div>
+		            </div>
+		
+		        </div>
+		
+		    </div>
+		
+		</div>
+		<script>
+			var gallery = document.getElementById("gallery")
+			var galleryImages = [].slice.call(gallery.getElementsByTagName("img"))
+
+var items = galleryImages.map(function(image) {
+	return {
+		src: image.src.replace("imgs","imgs/g"),
+		w: 640,
+		h: 480}
+})
+
+
+			var open = function(index) {
+				var pswpElement = document.querySelectorAll('.pswp')[0];
+				
+				// define options (if needed)
+				var options = {
+				    // optionName: 'option value'
+				    // for example:
+				    index: 0 // start at first slide
+				};
+				
+				// Initializes and opens PhotoSwipe
+				var gallery = new PhotoSwipe( pswpElement, PhotoSwipeUI_Default, items, options);
+				gallery.init()
+				gallery.goTo(index)
+			}
+
+			for (var i = 0 ; i<items.length; ++i) {
+				galleryImages[i].onclick = function() {
+					open(galleryImages.indexOf(this))
+				}
+			}
+		</script>
 	</body>
 </html>
