make gallery fit in very small device

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" media="all" href="common.css">
+		<link rel="stylesheet" media="only screen and (max-width: 347px)" href="verysmall.css">
 		<link rel="stylesheet" media="only screen and (max-width: 637px)" href="small.css">
 		<link rel="stylesheet" media="only screen and (min-width: 638px)" href="large.css">
 		<link rel="stylesheet" href="photoswipe.css">
